# GradeScrape

./: .gitignore  README.md  pyproject.toml  requirements.txt
gradescrape/: __init__.py  scrape_pdf.py
gradescrape/static/: style.css
gradescrape/templates/: index.html
transcriptr/: __init__.py
transcriptr/static/: style.css
transcriptr/templates/: base.html  success.html
